--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,10 +2,6 @@ version: 2
 
 project_name: fleet
 
-monorepo:
-  tag_prefix: fleet-
-  dir: .
-
 before:
   hooks:
     - make deps
@@ -77,13 +73,6 @@ builds:
       - -X github.com/fleetdm/fleet/v4/server/version.buildDate={{ time "2006-01-02" }}
       - -X github.com/fleetdm/fleet/v4/server/version.buildUser={{ .Env.USER }}
 
-universal_binaries:
-  - id: fleetctl # resulting binary id
-    ids: [fleetctl-macos] # source binaries
-    replace: true
-    name_template: fleetctl # resulting binary name
-    # Signing handled by separate macOS job in release workflow
-
 archives:
   - id: fleet
     builds:
@@ -97,19 +86,39 @@ archives:
   - id: fleetctl
     builds:
       - fleetctl
+      - fleetctl-macos
     # Note -- changing this can break GitOps and other workflows that expect these filenames to be deterministic!
-    name_template: fleetctl_v{{.Version}}_{{- if eq .Os "darwin" }}macos{{- else }}{{ .Os }}_{{.Arch}}{{ end }}
+    name_template: fleetctl_v{{.Version}}_{{- if eq .Os "darwin" }}macos_{{.Arch}}{{- else }}{{ .Os }}_{{.Arch}}{{ end }}
     wrap_in_directory: true
 
   - id: fleetctl-zip
     builds:
       - fleetctl
+      - fleetctl-macos
     # Note -- changing this can break GitOps and other workflows that expect these filenames to be deterministic!
-    name_template: fleetctl_v{{.Version}}_{{- if eq .Os "darwin" }}macos{{- else }}{{ .Os }}_{{.Arch}}{{ end }}
+    name_template: fleetctl_v{{.Version}}_{{- if eq .Os "darwin" }}macos_{{.Arch}}{{- else }}{{ .Os }}_{{.Arch}}{{ end }}
     format: zip
     wrap_in_directory: true
 
-# Docker images built via buildx in release workflow
+dockers:
+  - image_templates:
+      - "ghcr.io/{{ .Env.GITHUB_REPOSITORY_OWNER }}/fleet:{{ .Version }}"
+      - "ghcr.io/{{ .Env.GITHUB_REPOSITORY_OWNER }}/fleet:v{{ .Major }}"
+      - "ghcr.io/{{ .Env.GITHUB_REPOSITORY_OWNER }}/fleet:latest"
+    dockerfile: tools/fleet-docker/Dockerfile
+    use: buildx
+    build_flag_templates:
+      - "--platform=linux/amd64"
+      - "--label=org.opencontainers.image.title={{ .ProjectName }}"
+      - "--label=org.opencontainers.image.version={{ .Version }}"
+      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
+    ids:
+      - fleet
+      - fleetctl
+    extra_files:
+      - tools/fleet-docker/entrypoint.sh
+      - tools/fleet-docker/init-fleet.sh
+      - tools/fleet-docker/fleet.yml
 
 checksum:
   name_template: "checksums.txt"
