--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,6 @@ concurrency:
 
 env:
   REGISTRY: "ghcr.io"
-  ORGANISATION: ${{ github.repository_owner }}
-  REPOSITORY: ${{ github.event.repository.name }}
   BINARY_NAME: fleet
 
 # =============================================================================
@@ -44,7 +42,9 @@ jobs:
   changes:
     name: Detect Changes
     uses: ./.github/workflows/changes.yml
-    if: github.event_name == 'pull_request' && !github.event.pull_request.draft
+    if: |
+      github.event_name == 'pull_request' &&
+      !github.event.pull_request.draft
 
   test_client:
     name: "Go Tests"
@@ -53,7 +53,7 @@ jobs:
     if: |
       github.event_name == 'pull_request' &&
       !github.event.pull_request.draft &&
-      contains(needs.changes.outputs.go, 'true')
+      needs.changes.outputs.orbit == 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -151,9 +151,6 @@ jobs:
           retention-days: 1
           compression-level: 9
 
-  # ---------------------------------------------------------------------------
-  # Build Docker Image
-  # ---------------------------------------------------------------------------
   build:
     name: "Build Docker"
     needs: [changes]
@@ -173,7 +170,7 @@ jobs:
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -191,8 +188,4 @@ jobs:
         run: make deps-js
 
       - name: Build with GoReleaser
-        uses: goreleaser/goreleaser-action@v6
-        with:
-          distribution: goreleaser
-          version: "~> 2"
-          args: build --snapshot --clean -f .goreleaser-snapshot.yml
+        run: goreleaser build --snapshot --clean -f .goreleaser-snapshot.yml
